Fix new z-index issue.

--- a/styles/index.less
+++ b/styles/index.less
@@ -432,7 +432,7 @@ body {
     .sqs-block:not(.sqs-block-gallery) {
         // the z-index for elements that overlap w/ the gallery padding must be higher than
         // the z-index for the galler, otherwise they may not be shown
-        z-index: 1001;
+        z-index: 1001 !important;
     }
 
     // another workaround: squarespace will set the top padding to 0 for the first element
